--- a/public/client/index.html
+++ b/public/client/index.html
@@ -10,9 +10,25 @@
     <script src="/public/client/bower_components/jquery/jquery.min.js"></script>
     <script src="/public/client/bower_components/underscore/underscore-min.js"></script>
     <!-- your scripts -->
-    <script src="/public/client/env/config.js"></script>
-    <script src="/public/client/scripts/app.js"></script>
+    <!-- // <script src="/public/client/env/config.js"></script> -->
+    <!-- // <script src="/public/client/scripts/app.js"></script> -->
 
+    <script src="https://cdn.socket.io/socket.io-1.3.6.js"></script>
+    <script>
+    var socket = io();
+
+    $(document).on('click', '#submitMessage', function() {
+      var data = $('#inputMessage').val();
+      socket.emit('msg', data);
+      $('#inputMessage').val('');
+      return false;
+    })
+
+    socket.on('msg', function(msg){
+      $('#messages').prepend('<p>'+msg+'</p>');
+    })
+
+    </script>
   </head>
 
   <body>
@@ -22,7 +38,7 @@
       <select id='chatrooms'>
       </select>
       <div id="form">
-         <form>
+         <form id="sendMessageForm">
            <input type="text" id='inputMessage' placeholder="Write a message" >
            <button type='button' id='submitMessage'>Submit</button>
            <input type="text" id='inputRoom' placeholder="New Room Name" >
